[gd_scene load_steps=22 format=3 uid="uid://baexbkjxgaq2k"]

[ext_resource type="Texture2D" uid="uid://dojbf0vbcb4d1" path="res://Content/Pattern/battle_victory_ui_pattern.png" id="1_d6v8l"]
[ext_resource type="Script" path="res://Scripts/Ui/Battle/BattleVictoryLoseControl.gd" id="1_y2uq4"]
[ext_resource type="Texture2D" uid="uid://dqr7b5gtwkyb0" path="res://Content/UiSprites/BattleUi/BattleUiBg/frame_linetext_frame_2.png" id="2_fdn2u"]
[ext_resource type="Texture2D" uid="uid://6so3u2ys24mv" path="res://Content/UiSprites/BattleUi/BattleUiBg/effect_fusion_bg.png" id="3_3bkun"]
[ext_resource type="Texture2D" uid="uid://bfeg8u6r3054p" path="res://Content/UiSprites/BattleUi/BattleUiBg/effect_ellipse_1.png" id="4_okv6f"]
[ext_resource type="Texture2D" uid="uid://bn2idhqs3fbl5" path="res://Content/UiSprites/BattleUi/VictoryLoseIcons/icon_wings_left.png" id="5_g4n6u"]
[ext_resource type="Texture2D" uid="uid://crmt2f7fkwqy" path="res://Content/UiSprites/BattleUi/BattleUiBg/bubble_bg_2.png" id="5_imdhg"]
[ext_resource type="Texture2D" uid="uid://bpx1g514wd5wo" path="res://Content/Atlases/ui_atlas_2.png" id="5_wyhel"]
[ext_resource type="Texture2D" uid="uid://c6eur3g5advme" path="res://Content/UiSprites/BattleUi/BattleUiBg/bubble_bg_flag_2.png" id="6_024wx"]
[ext_resource type="Texture2D" uid="uid://cab4p2oub8w0n" path="res://Content/UiSprites/BattleUi/VictoryLoseIcons/icon_wings_right.png" id="6_tk11a"]
[ext_resource type="Texture2D" uid="uid://cieqdlrrh0mi0" path="res://Content/Atlases/ui_atlas.png" id="7_6t6qe"]
[ext_resource type="Script" path="res://Scripts/Ui/Battle/BattleRewardPanel.gd" id="7_dlopm"]

[sub_resource type="LabelSettings" id="LabelSettings_1s6vn"]
font_size = 28
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdonl"]
atlas = ExtResource("5_wyhel")
region = Rect2(453, 4, 439, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vhg5"]
atlas = ExtResource("5_wyhel")
region = Rect2(176, 372, 162, 392)

[sub_resource type="LabelSettings" id="LabelSettings_4ctr2"]
font_size = 14
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_01ner"]

[sub_resource type="AtlasTexture" id="AtlasTexture_77fw6"]
atlas = ExtResource("7_6t6qe")
region = Rect2(5, 4, 585, 239)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sj3yn"]
texture = SubResource("AtlasTexture_77fw6")
modulate_color = Color(0.752941, 0.764706, 0.894118, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1uhj"]
atlas = ExtResource("7_6t6qe")
region = Rect2(5, 4, 585, 239)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_07n42"]
texture = SubResource("AtlasTexture_p1uhj")

[node name="BattleVictoryLoseControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y2uq4")

[node name="Pattern" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.678431)
z_index = 1
custom_minimum_size = Vector2(360, 900)
layout_mode = 2
offset_top = -96.0
offset_right = 360.0
offset_bottom = 804.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_d6v8l")
expand_mode = 1
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.133333, 0.898039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="EmptyViewControl1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.35

[node name="HeadControl" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 66)
layout_mode = 2
size_flags_vertical = 4

[node name="HeadTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HeadControl"]
custom_minimum_size = Vector2(360, 66)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_right = 180.0
offset_bottom = 66.0
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("2_fdn2u")
expand_mode = 1

[node name="HeadLabel" type="Label" parent="MarginContainer/VBoxContainer/HeadControl/HeadTextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Victory"
label_settings = SubResource("LabelSettings_1s6vn")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[node name="EffectControl" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(168, 168)
layout_mode = 2
size_flags_vertical = 4

[node name="BgTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl"]
custom_minimum_size = Vector2(168, 168)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 5.0
offset_right = 84.0
offset_bottom = 173.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3_3bkun")
expand_mode = 1
stretch_mode = 4

[node name="GlowEffectTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_okv6f")
expand_mode = 1
stretch_mode = 4

[node name="WingsControl" type="Control" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect"]
custom_minimum_size = Vector2(180, 125)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 125.0
grow_horizontal = 2

[node name="WingLeftTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect/WingsControl"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -56.5
offset_right = 80.0
offset_bottom = 63.5
grow_vertical = 2
pivot_offset = Vector2(80, 60)
texture = ExtResource("5_g4n6u")
expand_mode = 1
stretch_mode = 4

[node name="WingRightTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect/WingsControl"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -56.5
offset_bottom = 63.5
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(0, 60)
texture = ExtResource("6_tk11a")
expand_mode = 1
stretch_mode = 4

[node name="FlagTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect"]
custom_minimum_size = Vector2(102, 84)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 42.0
offset_right = 52.0
offset_bottom = 126.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_gdonl")
expand_mode = 1

[node name="SwordTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectControl/BgTextureRect/FlagTextureRect"]
custom_minimum_size = Vector2(38, 92)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = -39.0
offset_right = 19.0
offset_bottom = 53.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_6vhg5")
expand_mode = 1

[node name="EmptyViewControl2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_vertical = 3

[node name="BattleRewardControl" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 120)
layout_mode = 2
size_flags_vertical = 3

[node name="BattleRewardPanel" type="TextureRect" parent="MarginContainer/VBoxContainer/BattleRewardControl"]
custom_minimum_size = Vector2(360, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_imdhg")
expand_mode = 1
script = ExtResource("7_dlopm")

[node name="BubbleFlagTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/BattleRewardControl/BattleRewardPanel"]
custom_minimum_size = Vector2(160, 46)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = -8.0
offset_right = 80.0
offset_bottom = 38.0
grow_horizontal = 2
texture = ExtResource("6_024wx")
expand_mode = 1

[node name="BubbleFlagLabel" type="Label" parent="MarginContainer/VBoxContainer/BattleRewardControl/BattleRewardPanel/BubbleFlagTextureRect"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -15.0
offset_right = 70.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Rewards"
label_settings = SubResource("LabelSettings_4ctr2")
horizontal_alignment = 1
justification_flags = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BattleRewardControl/BattleRewardPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 58

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/BattleRewardControl/BattleRewardPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 58
columns = 5

[node name="EmptyViewControl3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="ClaimButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(134, 52)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_01ner")
theme_override_styles/hover = SubResource("StyleBoxTexture_sj3yn")
theme_override_styles/normal = SubResource("StyleBoxTexture_07n42")
text = "CLAIM"
icon_alignment = 1

[node name="EmptyViewControl4" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 3
